--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -44,8 +44,8 @@ footer {
   margin: 0;
   padding: 0;
   @media (min-width: $mobile-large) {
-    max-width: calc(100% - 48px);
-    width: calc(100% - 48px);
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
     margin: 0 auto;
   }
   @media (min-width: $tablet) {
@@ -59,5 +59,9 @@ footer {
   @media (min-width: $widescreen) {
     max-width: 1168px;
     width: 1168px;
+  }
+  @media (min-width: $fullhd) {
+    max-width: 1400px;
+    width: 1400px;
   }
 }
