--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -1,204 +1,42 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:400,700,900');
 
-@font-face {
-  font-family: "fa";
-  src: url("~/assets/fonts/font-awesome.eot?30047827");
-  src: url("~/assets/fonts/font-awesome.eot?30047827#iefix")
-      format("embedded-opentype"),
-    url("~/assets/fonts/font-awesome.woff?30047827") format("woff"),
-    url("~/assets/fonts/font-awesome.ttf?30047827") format("truetype"),
-    url("~/assets/fonts/font-awesome.svg?30047827#font-awesome") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-.fa {
-  font-family: "fa";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
-
-  color: #979797;
-
+.social {
   display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  // margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
+  height: 24px;
+  width: 24px;
+  background-image: url('/images/icons.svg');
+  background-repeat: no-repeat;
+  transition: background-position 0.2s ease;
 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
-
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
-
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  // margin-left: .2em;
-
-  /* You can be more comfortable with increased icons size */
-  font-size: 1.3em;
-
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Uncomment for 3D effect */
-  // text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3);
-  &.is-white {
-    color: white !important;
+  &--behance {
+    background-position: -0px -0px;
   }
 
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // margin: 0 auto;
-  // height: 100%;
-  // width: 100%;
-}
+  &--linkedin {
+    background-position: -24px -0px;
+  }
 
-.fa-mail:before {
-  content: "\e800";
-}
-.fa-certificate:before {
-  content: "\f0a3";
-}
-.fa-menu:before {
-  content: "\e806";
-}
-.fa-calendar:before {
-  content: "\f133";
-}
-.fa-child:before {
-  content: "\f1ae";
-}
-.fa-cab:before {
-  content: "\f1b9";
-}
-.fa-cancel:before {
-  content: "\e801";
-}
-.fa-arrow-right:before {
-  content: "\f105";
-}
-.fa-arrow-left:before {
-  content: "\f104";
-}
-.fa-cancel:before {
-  content: "\e801";
-}
-.fa-download:before {
-  content: "\e802";
-}
-.fa-upload:before {
-  content: "\e803";
-}
-.fa-location:before {
-  content: "\e804";
-}
-.fa-link:before {
-  content: "\f08e";
-}
-.fa-sliders:before {
-  content: "\f1de";
-}
-.fa-arrow-up:before {
-  content: "\f106";
-}
-.fa-arrow-down:before {
-  content: "\f107";
-}
-.fa-bus:before {
-  content: "\f207";
-}
-.fa-train:before {
-  content: "\f238";
-}
-.fa-subway:before {
-  content: "\f239";
-}
-.fa-search:before {
-  content: "\e805";
-}
-.fa-share:before {
-  content: "\f1e0";
-}
+  &--dribbble {
+    background-position: -48px -0px;
+  }
 
-.social__icon,
-.icon {
-  font-family: "fa";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
+  &--instagram {
+    background-position: -72px -0px;
+  }
 
-  // display: inline-block;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: inherit;
-  width: 1em;
-  // margin-right: .2em;
-  text-align: left;
-  /* opacity: .8; */
+  &--behance:hover {
+    background-position: -0px -24px;
+  }
 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
+  &--linkedin:hover {
+    background-position: -24px -24px;
+  }
 
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
+  &--dribbble:hover {
+    background-position: -48px -24px;
+  }
 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: 0.2em;
-
-  /* You can be more comfortable with increased icons size */
-  /* font-size: 120%;
- 
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
-
-.social__icon:before {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-// social icons classes
-.social__icon--linkedin:before {
-  content: "\f0e1";
-  // line-height: 1;
-  font-size: 22px;
-  // display: flex;
-  // align-items: center;
-  // margin-bottom: 1px;
-}
-.social__icon--youtube:before {
-  content: "\f167";
-}
-
-// modded ones
-.social__icon--twitter:before {
-  content: "\f099";
-  // line-height: 1.7;
-  font-size: 22px;
-}
-.social__icon--facebook:before {
-  content: "\f09a";
-  // line-height: 1.7;
-  font-size: 22px;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // margin-right: 1px;
-}
-.social__icon--instagram:before {
-  content: "\f16d";
-  font-size: 22px;
+  &--instagram:hover {
+    background-position: -72px -24px;
+  }
 }
