--- a/assets/css/fonts.scss
+++ b/assets/css/fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Muli:400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Muli:300, 400, 600, 800');
 
 .social {
   display: inline-block;
