added brand colours

--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,7 +1,7 @@
 // Initial variables //
 $primary: #f4a261;
-$secondary: #002650;
-$secondary-dark: #000d19;
+$secondary: #686868;
+$subtitle: #9b9b9b;
 $success: #94d500;
 $grey: #686868;
 $grey-secondary: #686868;
