--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,6 +1,7 @@
 // Initial variables //
 $primary: #f4a261;
-$secondary: #686868;
+$secondary: #000;
+$secondary-gray: #686868;
 $subtitle: #9b9b9b;
 $success: #94d500;
 $grey: #686868;
