new capability section

--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -64,6 +64,8 @@ $fullhd: 1440px;
 // Gutter
 $gap: 32px;
 
+$rule: 1.4;
+
 // ==========================================================================
 // Base – Mixins
 // ==========================================================================
