--- a/assets/css/animations.scss
+++ b/assets/css/animations.scss
@@ -1,15 +1,13 @@
-// animations and transitions
 .fade-enter-active,
 .fade-leave-active {
-  transition: opacity 0.4s ease-out both;
+  transition: all 1.2s ease-in-out;
 }
+
 .fade-enter,
 .fade-leave-to {
+  position: absolute;
   opacity: 0;
-}
-.fade-leave,
-.fade-enter-to {
-  opacity: 1;
+  top: 0;
 }
 
 .page-leave-active {
@@ -28,11 +26,12 @@
 
 .fadeIn-enter-active {
   animation: fadeIn 0.6s ease-in both;
+  overflow-y: hidden !important;
 }
 
 .fadeIn-leave-active {
   animation: fadeOut 0.6s ease-in both 0.2s;
-  // overflow-y: hidden !important;
+  overflow-y: hidden !important;
 }
 
 .fadeIn-enter-active {
@@ -41,7 +40,7 @@
 
 .slide-leave-active {
   animation: slideOut 1s ease-in 1s both;
-  // overflow-y: hidden !important;
+  overflow-y: hidden !important;
 }
 
 .slide-enter-active {
