--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -54,7 +54,7 @@ body {
 h1.jumbo {
   line-height: 1;
   font-weight: 800;
-  padding: $gap * 3 0;
+  padding: 0 0 $gap * 3;
   font-size: $font-size * $rule * 2.5;
 
   @include media(sm) {
@@ -65,7 +65,7 @@ h1.jumbo {
 h1 {
   line-height: 1;
   font-weight: 800;
-  padding: $gap * 3 0;
+  padding: 0 0 $gap * 3;
   font-size: $font-size * $rule * 1.8;
 
   @include media(sm) {
@@ -89,4 +89,8 @@ h5,
 h6 {
   font-size: $font-size * $rule;
   font-weight: 300;
+}
+
+img {
+  max-width: 100%;
 }
