--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -16,7 +16,7 @@ $link-hover: $primary;
 $border-radius: 100px;
 
 // Fonts //
-$family-primary: 'Muli', Helvetica, Arial, sans-serif;
+$family-primary: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 
 // Font sizes //
 $font-size: 16px;
