--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -102,6 +102,14 @@ $rule: 1.4;
   text-overflow: ellipsis;
 }
 
+// fadeInUp animation
+@mixin fadeInUp {
+  transform: translateY(50px);
+  opacity: 0;
+  transition: transform 0.7s cubic-bezier(0.15, 0.46, 0.21, 0.93),
+    opacity 0.5s ease-in-out;
+}
+
 // Breakpoint sizes
 // Example usage @include breakpoint(x) { ... }; - where x is the device
 // $mobile-large: 577px;
