added custom fields to homepage

--- a/assets/css/animations.scss
+++ b/assets/css/animations.scss
@@ -1,6 +1,6 @@
 .fade-enter-active,
 .fade-leave-active {
-  transition: all 1.2s ease-in-out;
+  transition: all .8s ease-in-out;
 }
 
 .fade-enter,
