--- a/assets/css/animations.scss
+++ b/assets/css/animations.scss
@@ -17,12 +17,15 @@
 .rotate {
   transition: opacity .6s ease-in-out;
   position: absolute;
-  height: 32px;
-  width: 32px;
+  height: 36px;
+  width: 36px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transform-origin: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 // .page-leave-active {
