contact page, new home section, new acf

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -51,7 +51,7 @@ body {
 @import './layout';
 
 // rule of thirds
-h1.jumbo {
+.jumbo {
   line-height: 1;
   font-weight: 800;
   padding: 0 0 $gap * 3;
