--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -4,6 +4,7 @@ $secondary: #000;
 $secondary-gray: #686868;
 $subtitle: #9b9b9b;
 $success: #94d500;
+$yellow: #f2d636;
 $grey: #686868;
 $grey-secondary: #686868;
 $lightgrey: #b4b5b3;
