--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -182,27 +182,34 @@ $rule: 1.4;
 
 @mixin size($heading) {
   @if $heading == jumbo {
-    font-size: responsive(
-      round($font-size * $rule * 2),
-      round($font-size * $rule * 4)
-    );
+    font-size: 70px;
+    @supports (display: grid) {
+      font-size: responsive(
+        round($font-size * $rule * 2),
+        round($font-size * $rule * 4)
+      );
+    }
     font-range: 320px #{$tablet};
   } @else if $heading == h1 {
+    font-size: 40px;
     font-size: responsive(
       round($font-size * $rule * 1.8) round($font-size * $rule * 3)
     );
     font-range: 320px #{$tablet};
   } @else if $heading == h2 {
+    font-size: 30px;
     font-size: responsive(
       round($font-size * $rule * 1.4) round($font-size * $rule * 2)
     );
     font-range: 320px #{$tablet};
   } @else if $heading == h3 {
+    font-size: 24px;
     font-size: responsive(
       round($font-size * $rule) round($font-size * $rule * $rule)
     );
     font-range: 320px #{$tablet};
   } @else if $heading == h4 {
+    font-size: 22px;
     font-size: round($font-size * $rule);
   }
 }
