--- a/assets/css/elements.scss
+++ b/assets/css/elements.scss
@@ -1,1 +1,27 @@
+.button {
+  &--contact,
+  &--sent {
+    margin-top: $gap;
+    margin-bottom: $gap;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    box-shadow: 0 0 0 1px $secondary;
+    cursor: pointer;
+    min-width: 110px;
+    height: auto;
+    padding: 5px 20px;
+    transition: all 0.3s ease-in-out;
 
+    &:focus,
+    &:hover,
+    &:active {
+      box-shadow: 0 0 0 2px $secondary;
+    }
+  }
+
+  &--sent {
+    color: black;
+    text-decoration: none;
+  }
+}
