--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,13 +1,11 @@
 // Initial variables //
 $primary: #fa7921;
 $secondary: #000;
-$secondary-gray: #686868;
 $subtitle: #9b9b9b;
 $success: #94d500;
 $yellow: #f2d636;
 $grey: #686868;
-$grey-secondary: #686868;
-$lightgrey: #b4b5b3;
+$lightgrey: #e4e3e3;
 $lightergrey: #fafafa;
 $info: #fff;
 $danger: #df4661;
