--- a/assets/css/elements.scss
+++ b/assets/css/elements.scss
@@ -24,4 +24,17 @@
     color: black;
     text-decoration: none;
   }
+
+  &--is-white {
+    color: white;
+    min-width: 115px;
+    text-transform: uppercase;
+    box-shadow: 0 0 0 1px white;
+
+    &:focus,
+    &:hover,
+    &:active {
+      box-shadow: 0 0 0 2px white;
+    }
+  }
 }
