--- a/assets/css/elements.scss
+++ b/assets/css/elements.scss
@@ -29,12 +29,14 @@
     color: white;
     min-width: 115px;
     text-transform: uppercase;
+    transition: all .4s ease-in-out !important;
     box-shadow: 0 0 0 1px white;
 
     &:focus,
     &:hover,
     &:active {
       box-shadow: 0 0 0 2px white;
+      font-weight: 600;
     }
   }
 }
