added fade in to lazyloaded

--- a/assets/css/animations.scss
+++ b/assets/css/animations.scss
@@ -365,4 +365,14 @@
     opacity: 1;
   }
 }
+
+// .lazyload {
+//   filter: blur(30px);
+//   transition: filter .3s ease-in-out;
+// }
+
+// .lazyloaded {
+//   filter: blur(0);
+// }
 /* purgecss end ignore */
+
