--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,11 +1,11 @@
 // Initial variables //
 $primary: #fa7921;
 $secondary: #000;
-$subtitle: #9b9b9b;
+$subtitle: #979797;
 $success: #94d500;
 $yellow: #f2d636;
 $grey: #686868;
-$lightgrey: #e4e3e3;
+$lightgrey: #e7e7e7;
 $lightergrey: #fafafa;
 $info: #fff;
 $danger: #df4661;
