adding vars back

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,7 +3,7 @@
  * Copyright 2017-2018 Alessandro Giordo
  * Licensed under MIT
  */
-// @import '~bulma/sass/utilities/_all';
+@import '~bulma/sass/utilities/_all';
 
 // Breakpoints
 $mobile: 576px !default; // used for max-width only
