--- a/assets/css/helpers.scss
+++ b/assets/css/helpers.scss
@@ -174,6 +174,9 @@
   }
 }
 @media (min-width: $tablet) {
+  .is-hidden-desktop {
+    display: none !important;
+  }
   .align-center-tablet {
     display: grid;
     align-items: center;
